# cafe_manager

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
api_v1/: filters.py  serializers.py  swagger_responses.py  urls.py  views.py
api_v1/tests/: conftest.py  test_appi_v1_views.py
cafe_manager/: docs.py  settings.py  urls.py
manager_app/: forms.py  models.py  urls.py  views.py
manager_app/migrations/: 0001_initial.py
manager_app/static/manager_app/css/: index.css
manager_app/static/manager_app/js/: index.js
manager_app/templates/manager_app/: add_item.html  add_order.html  base.html  index.html  order_confirm_delete.html  order_detail.html  revenue.html  update_order_status.html
manager_app/tests/: conftest.py  test_manager_app_models.py  test_manager_app_views.py
